# toddcox-faster

./: .gitignore  CMakeLists.txt
Testing/: CMakeLists.txt  common.hpp  schlafli.cpp  special.cpp
example/: CMakeLists.txt  bench.cpp  group.cpp  path.cpp
examples/: CMakeLists.txt  bench.cpp  complex.cpp  group.cpp  path.cpp
ext/: CMakeLists.txt
include/tc/: complex.hpp  core.hpp  cosets.hpp  group.hpp  groups.hpp  solver.hpp
include/tc/core/: action.hpp  cosets.hpp  group.hpp  path.hpp  rel.hpp  solve.hpp  solver.hpp
src/: core.cpp  solve.cpp
